<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF"
    android:foregroundTint="#00FFFFFF"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/workout_and_exercise_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/workout_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/workout_name_edittext"
                android:hint="@string/edit_workout_name"
                android:inputType="text"
                android:importantForAutofill="no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:text="@string/default_workout_name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@null"
                android:contentDescription="@string/workout_options"
                android:onClick="showWorkoutMenu"
                app:srcCompat="@drawable/ic_baseline_more_vert_blue_24"
                tools:ignore="InefficientWeight,TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/workout_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/workout_name_layout"
            android:text="@string/default_timer_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workout_name_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add_exercise_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        style="@style/Button.Wide.ClearBlue"
        android:text="@string/add_exercise"
        app:layout_constraintTop_toBottomOf="@+id/workout_and_exercise_layout"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/cancel_workout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        style="@style/Button.Wide.ClearRed"
        android:text="@string/cancel_workout"
        app:layout_constraintTop_toBottomOf="@+id/add_exercise_button"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>